feat: 개발 데몬 정리 탭 추가
Gradle/Kotlin 데몬 등 개발 도구 프로세스를 스캔해 메모리
점유량과 함께 보여주고 선택 종료한다. 화이트리스트 기반
main class 파싱으로 대상을 식별하며, 알 수 없는 옵션은
종료 후보로 추측하지 않는다.

설계 문서(docs/memory-cleanup.md)의 launcher option 목록은
Gradle 8.13·Kotlin 2.2.21 실측에 맞춰 분리형 --add-exports
등을 허용하도록 보정했다.